# ParLab6HeatMap

./: .gitignore  CMakeLists.txt  README.md  jacobi.cpp  laplace2d.cpp  laplace2d.h  matrix_parser.py
